syntax = "proto3";

message LoginRequest {
    string username = 1;
    string password = 2;

    bool remember_me = 3;
}

message LoginWithTokenRequest {
    uint32 user_id = 1;
    string token = 2;
}

message LoginResponse {
    bool success = 1;
    uint32 user_id = 2;

    string token = 3;
}

message ProjectListRequest {
    enum Category {
        UNIVERSAL = 0;
        RECENT = 1;
    }
    Category category = 1;
    uint32 offset = 2;
    uint32 limit = 3;
}

message User {
    uint32 id = 1;
    string name = 2;

    enum Right {
        None = 0;
        Watcher = 1;
        Tester = 2;
        Member = 3;
        Admin = 9;
    }

    //Used in context of a project
    Right right = 32;
}

message Project {
    uint32 id = 1;
    string name = 2;
    string description = 3;

    repeated User users = 4;
}

message ProjectListResponse {
    repeated Project projects = 1;
}

message MediaRequest {
    uint32 id = 1;

    enum Size {
        XS = 0;
        SM = 1;
        MD = 2;
        LG = 3;
    }
    Size size = 2;
}

message MediaResponse {
    uint32 id = 1;
    bytes content = 2;
}

service EmergencyExplorerService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc LoginWithToken (LoginWithTokenRequest) returns (LoginResponse);

    rpc ProjectList (ProjectListRequest) returns (ProjectListResponse);

    rpc GetMedia (MediaRequest) returns (MediaResponse);
}